@@ -110,6 +110,7 @@ setMethod(
       #make it Summarized Experiment
       return(as(x,"SummarizedExperiment"))
     }
+    
     newClLabels<-clusterMatrix(x)[,-whichRemove,drop=FALSE]
     newClusterInfo<-clusterInfo(x)[-whichRemove]
     newClusterType<-clusterTypes(x)[-whichRemove]
@@ -120,12 +121,16 @@ setMethod(
     coMat<-x@coClustering
     orderSamples<-orderSamples(x)
     if(primaryClusterIndex(x) %in% whichRemove) pIndex<-1
-    else pIndex<-match(primaryClusterIndex(x),1:NCOL(clusterMatrix(x))[-whichRemove])
+    else pIndex<-match(primaryClusterIndex(x),(1:NCOL(clusterMatrix(x)))[-whichRemove])
     if(x@dendro_index %in% whichRemove){
         dend_cl<-NULL
         dend_samples<-NULL
         dend_ind<-NA_real_
     }
+    else{
+      dend_ind<-match(dend_ind,(1:NCOL(clusterMatrix(x)))[-whichRemove])
+    }
+    
     retval<-clusterExperiment(as(x,"SummarizedExperiment"),newClLabels,transformation(x),
                               clusterTypes=newClusterType,
                               clusterInfo<-newClusterInfo,
@@ -136,7 +141,7 @@ setMethod(
                             coClustering=coMat,
                             orderSamples=orderSamples
                               )
-    validObject(retval)
+   validObject(retval)
     clusterLegend(retval)<-newClusterColors
     return(retval)
   }
