@@ -10,6 +10,7 @@ Changes:
 Bug fixes:
 * fixed bug in mergeClusters unable to plot when too big of edge lengths (same as plotDendrogram)
 * fixed bug in subsetting, where unable to subset samples by character
+* fixed bug in removeClusters so that correctly updates dendro_index and primary_index slots after cluster removed.
 
 Changes in version 1.1.1 (Release date: 2016-10-14 )
 ==============
